--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,39 @@
-/.gradle/
-/bin/
-/.settings/
-/build/
-/.classpath
-/.project
+*.class
+
+# Log file
+*.log
+
+# Package Files #
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+# # ignore mac files
+.DS_Store
+
+# # ignore idea storage
+.idea/
+*.iml
+*.iws
+out/
+.gradle
+build
+
+#Eclipse files
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.classpath
+classes/*
+out/*
+target/*
