--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     
 }
 
-description = 'fwmt-census-canonical'
+description = 'census-fwmt-canonical'
 
 
 version = '1.0.2-SNAPSHOT'
@@ -44,7 +44,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId = group
-            artifactId = 'fwmt-census-canonical'
+            artifactId = 'census-fwmt-canonical'
             version = version
 
             from components.java
