--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ description = 'census-fwmt-canonical'
 
 version = '1.0.2-SNAPSHOT'
 
-group = 'uk.gov.ons.fwmt'
+group = 'uk.gov.ons.census.fwmt'
 
 sourceCompatibility = 11
 targetCompatibility = 11
