--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 description = 'census-fwmt-canonical'
 
-version = '1.0.15-SNAPSHOT'
+version = '1.0.16-RELEASE'
 
 group = 'uk.gov.ons.census.fwmt'
 
