change artifatory server details

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ repositories {
 
     mavenCentral()
 }
+ARTIFACTORY_URL
+ARTIFACTORY_USERNAME
 
 artifactory {
     contextUrl = System.getenv('ARTIFACTORY_URL')
