--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ install: true
 script:
 - |
   if [[ $TRAVIS_COMMIT_MESSAGE != 'CONCOURSE SNAPSHOT UPDATE' ]]; then
+      echo "artifactory_user=$ARTIFACTORY_USERNAME" >> ~/.gradle/gradle.properties
+      echo "artifactory_password=$ARTIFACTORY_PASSWORD" >> ~/.gradle/gradle.properties
+    ./gradlew build --info;
+  fi
+  - |
+  if [[ $TRAVIS_COMMIT_MESSAGE != 'CONCOURSE SNAPSHOT UPDATE' ]]; then
     ./gradlew build --info;
   fi
 env:
